# tracker_of_habits

./: .coveragerc  .env.sample  .gitignore  README.md  docker-compose.yaml  dump.rdb  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_last_action.py  0002_habit_reward.py
users/: models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_chat_id.py
